--- a/predict.ipynb
+++ b/predict.ipynb
@@ -6,17 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "#import os\n",
     "\n",
-    "args.output_attention = True\n",
+    "#args.output_attention = True\n",
     "\n",
-    "exp = Exp(args)\n",
+    "#exp = Exp(args)\n",
     "\n",
-    "model = exp.model\n",
+    "#model = exp.model\n",
     "\n",
-    "setting = 'informer_ETTh1_ftM_sl96_ll48_pl24_dm512_nh8_el2_dl1_df2048_atprob_fc5_ebtimeF_dtTrue_mxTrue_exp_0'\n",
-    "path = os.path.join(args.checkpoints,setting,'checkpoint.pth')\n",
-    "model.load_state_dict(torch.load(path))"
+    "#setting = 'informer_ETTh1_ftM_sl96_ll48_pl24_dm512_nh8_el2_dl1_df2048_atprob_fc5_ebtimeF_dtTrue_mxTrue_exp_0'\n",
+    "#path = os.path.join(args.checkpoints,setting,'checkpoint.pth')\n",
+    "#model.load_state_dict(torch.load(path))"
    ]
   },
   {
