--- a/predict.ipynb
+++ b/predict.ipynb
@@ -532,7 +532,7 @@
    "hash": "f57785bf53e86c458d31dd8512073d1ac6cae98f342ec9a1a9a8506681d63dcb"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('openmmlab')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -546,10 +546,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
