tested some model

--- a/test_reading_process.ipynb
+++ b/test_reading_process.ipynb
@@ -1220,8 +1220,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "a3ecadce-ff94-4771-af79-00806aa7249b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e47ac172-d3c5-4361-ae50-af7972fde33b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perd_path = 'results/ETTm2_96_96_Autoformer_ETTm2_ftS_sl96_ll96_pl96_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/pred.npy'\n",
+    "ground_truth_path = \"results/ETTm2_96_96_Autoformer_ETTm2_ftS_sl96_ll96_pl96_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/true.npy\"\n",
+    "metric_path = \"results/ETTm2_96_96_Autoformer_ETTm2_ftS_sl96_ll96_pl96_dm512_nh8_el2_dl1_df2048_fc3_ebtimeF_dtTrue_Exp_0/metrics.npy\"\n",
+    "# Load the array from the .npy file\n",
+    "pred_result = np.load(perd_path)\n",
+    "ground_truth = np.load(ground_truth_path)\n",
+    "metric = np.load(metric_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "407f8548-9453-4712-a434-6e04742b7f13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(395, 96, 1)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ground_truth.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "f038c48c-af98-4ce2-93b1-7a2f7c92ef3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ground_truth_unscale = scaler.inverse_transform(ground_truth[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "5b22b8d0-06ba-4eff-911e-754c20022394",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[25.576 ],\n",
+       "       [26.016 ],\n",
+       "       [26.016 ],\n",
+       "       [26.016 ],\n",
+       "       [26.016 ],\n",
+       "       [26.016 ],\n",
+       "       [26.2355],\n",
+       "       [26.2355],\n",
+       "       [26.2355],\n",
+       "       [26.2355],\n",
+       "       [26.2355],\n",
+       "       [26.2355],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.455 ],\n",
+       "       [26.2355],\n",
+       "       [26.016 ],\n",
+       "       [26.016 ],\n",
+       "       [26.016 ],\n",
+       "       [25.796 ],\n",
+       "       [25.796 ],\n",
+       "       [25.796 ],\n",
+       "       [25.796 ],\n",
+       "       [26.016 ],\n",
+       "       [26.2355],\n",
+       "       [26.675 ],\n",
+       "       [27.1145],\n",
+       "       [27.5535],\n",
+       "       [28.213 ],\n",
+       "       [28.872 ],\n",
+       "       [29.531 ],\n",
+       "       [30.41  ],\n",
+       "       [31.0695],\n",
+       "       [31.729 ],\n",
+       "       [31.9485],\n",
+       "       [32.6075],\n",
+       "       [33.0465],\n",
+       "       [33.2665],\n",
+       "       [32.6075],\n",
+       "       [31.509 ],\n",
+       "       [31.289 ],\n",
+       "       [31.0695],\n",
+       "       [31.289 ],\n",
+       "       [31.729 ],\n",
+       "       [32.827 ],\n",
+       "       [33.706 ],\n",
+       "       [33.926 ],\n",
+       "       [34.365 ],\n",
+       "       [34.805 ],\n",
+       "       [35.464 ],\n",
+       "       [35.684 ],\n",
+       "       [35.464 ],\n",
+       "       [35.244 ],\n",
+       "       [34.805 ],\n",
+       "       [34.585 ],\n",
+       "       [34.3655],\n",
+       "       [34.3655],\n",
+       "       [34.1455],\n",
+       "       [33.706 ],\n",
+       "       [33.486 ],\n",
+       "       [33.047 ],\n",
+       "       [32.607 ],\n",
+       "       [32.168 ],\n",
+       "       [31.729 ],\n",
+       "       [31.289 ],\n",
+       "       [30.85  ],\n",
+       "       [30.41  ],\n",
+       "       [29.971 ],\n",
+       "       [29.531 ],\n",
+       "       [29.092 ],\n",
+       "       [28.872 ],\n",
+       "       [28.4325],\n",
+       "       [28.213 ],\n",
+       "       [27.993 ],\n",
+       "       [27.773 ],\n",
+       "       [27.334 ],\n",
+       "       [27.334 ],\n",
+       "       [27.334 ],\n",
+       "       [27.1145],\n",
+       "       [27.1145],\n",
+       "       [26.895 ],\n",
+       "       [26.895 ],\n",
+       "       [26.895 ],\n",
+       "       [26.455 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ground_truth_unscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "7d255c58-9f97-4f6c-8aea-9c15ea21ac0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(395, 96, 1)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_result.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "3fe80ac4-5197-4033-ab63-3385784a1f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_result_unscale = scaler.inverse_transform(pred_result[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "08522452-0b8a-4ce4-ad2a-c62c50e2186c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[24.423325],\n",
+       "       [24.483988],\n",
+       "       [24.431   ],\n",
+       "       [24.370872],\n",
+       "       [23.949236],\n",
+       "       [24.22384 ],\n",
+       "       [23.753664],\n",
+       "       [23.492048],\n",
+       "       [23.708649],\n",
+       "       [23.016954],\n",
+       "       [22.512615],\n",
+       "       [22.109327],\n",
+       "       [21.798685],\n",
+       "       [21.591875],\n",
+       "       [21.347216],\n",
+       "       [20.937702],\n",
+       "       [20.623074],\n",
+       "       [20.46063 ],\n",
+       "       [20.564587],\n",
+       "       [20.934866],\n",
+       "       [20.973095],\n",
+       "       [21.259502],\n",
+       "       [21.686666],\n",
+       "       [21.912949],\n",
+       "       [21.971313],\n",
+       "       [22.432436],\n",
+       "       [23.070595],\n",
+       "       [23.272861],\n",
+       "       [23.415367],\n",
+       "       [23.602741],\n",
+       "       [23.873062],\n",
+       "       [24.069155],\n",
+       "       [24.170311],\n",
+       "       [24.20167 ],\n",
+       "       [24.470673],\n",
+       "       [24.751492],\n",
+       "       [24.643929],\n",
+       "       [24.582397],\n",
+       "       [24.768478],\n",
+       "       [24.75818 ],\n",
+       "       [24.442888],\n",
+       "       [24.17532 ],\n",
+       "       [23.949562],\n",
+       "       [23.68163 ],\n",
+       "       [23.161083],\n",
+       "       [22.878437],\n",
+       "       [22.31772 ],\n",
+       "       [22.123098],\n",
+       "       [21.772003],\n",
+       "       [21.812773],\n",
+       "       [21.690609],\n",
+       "       [21.680908],\n",
+       "       [21.72863 ],\n",
+       "       [22.09235 ],\n",
+       "       [22.129879],\n",
+       "       [22.238241],\n",
+       "       [22.073977],\n",
+       "       [22.650707],\n",
+       "       [23.44797 ],\n",
+       "       [24.181425],\n",
+       "       [24.46558 ],\n",
+       "       [24.805422],\n",
+       "       [25.419357],\n",
+       "       [25.882326],\n",
+       "       [26.352587],\n",
+       "       [26.581398],\n",
+       "       [26.9552  ],\n",
+       "       [26.83136 ],\n",
+       "       [26.669275],\n",
+       "       [26.564615],\n",
+       "       [26.686407],\n",
+       "       [26.586376],\n",
+       "       [26.514254],\n",
+       "       [26.533422],\n",
+       "       [26.175762],\n",
+       "       [25.821196],\n",
+       "       [25.29201 ],\n",
+       "       [25.161127],\n",
+       "       [24.817171],\n",
+       "       [24.546425],\n",
+       "       [24.132174],\n",
+       "       [23.73383 ],\n",
+       "       [23.228611],\n",
+       "       [22.789623],\n",
+       "       [22.4523  ],\n",
+       "       [22.522842],\n",
+       "       [22.50834 ],\n",
+       "       [22.568504],\n",
+       "       [22.516582],\n",
+       "       [22.604774],\n",
+       "       [22.824114],\n",
+       "       [23.103487],\n",
+       "       [23.188656],\n",
+       "       [23.446365],\n",
+       "       [23.447565],\n",
+       "       [25.861485]], dtype=float32)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_result_unscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "1959156d-9163-45b7-aaab-ad08c9616fca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data_start = 12 * 30 * 24 * 4 + 4 * 30 * 24 * 4 - 720\n",
+    "test_data_start_end = 12 * 30 * 24 * 4 + 8 * 30 * 24 * 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "360b5133-b193-4bc1-b064-3ae004e559e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_y = data[test_data_start:test_data_start_end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f5a130-4c8d-4bf5-873c-739b03b3cf68",
    "metadata": {},
    "outputs": [],
    "source": []
